# device_board_yanlink

./: README.md
nearlink_dk_3863/: ohos.build
nearlink_dk_3863/liteos_m/: config.gni
